--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "Yaxin Hou"
   pronouns         : "he/him"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Man proposes, god disposes."
   location         : "NanJing, JiangSu"
   employer         : "Southeast University"
   uri              : # URL
