--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   bio              : "Man proposes, god disposes."
   location         : "NanJing, JiangSu"
   employer         : "Southeast University"
-  uri              : # URL
+  uri              : "Southeast University"
   email            : "yaxin@seu.edu.cn" 
 
   # Academic websites
