--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Yaxin Hou"
-  pronouns         : "he/him"  
+  pronouns         : "He/Him"  
   bio              : "Man proposes, god disposes."
   location         : "NanJing, JiangSu"
   employer         : "Southeast University"
