--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ repository               : "https://github.com/YaxinHou/yaxinhou.github.io"
 author:
   # Biographic information
   avatar           : "my_profile.jpg"
-  name             : "Yaxin Hou"
+  name             : "Hou Yaxin"
   pronouns         : "He/Him"  
   bio              : "Man proposes, god disposes."
   location         : "NanJing, JiangSu"
