--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 site_theme               : "default" # Currently available options are "default", "air"
 title                    : "Hou Yaxin's Page"
 title_separator          : "-"
-name                     : &name ""
+name                     : &name "Hou Yaxin"
 description              : &description "Ph.D. student of Southeast University"   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : https://yaxinhou.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
