--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   name             : "Hou Yaxin"
   pronouns         : "He/Him"  
   bio              : "Man proposes, god disposes."
-  location         : "NanJing, JiangSu"
+  location         : "Nanjing, Jiangsu"
   employer         : "Southeast University"
   uri              : # URL
   email            : "yaxin@seu.edu.cn" 
