--- a/_config.yml
+++ b/_config.yml
@@ -239,7 +239,7 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: single
+      layout: pages
       author_profile: true
       read_time: true
       comments: true
@@ -250,7 +250,7 @@ defaults:
       path: ""
       type: pages
     values:
-      layout: single
+      layout: pages
       author_profile: true
   # _teaching
   # - scope:
