--- a/_config.yml
+++ b/_config.yml
@@ -252,6 +252,7 @@ defaults:
     values:
       layout: single
       author_profile: true
+      classes: wide
   # _teaching
   # - scope:
   #     path: ""
